# archon

./: .gitignore  ARCHON_CODEX_BUILD_SPEC(1).md  ARCHON_V2_SPEC.md  CONTRIBUTING.md  NEXT_STEPS.md  PIVOT.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
docs/: CONTROL_CENTER_PLAN.md
examples/: archon-config.yaml  claude-settings.json  zellij-layout.kdl
src/archon/: __init__.py  agent_view.py  agents.py  api.py  attention.py  budget.py  cli.py  config.py  dash.py  db.py  dispatcher.py  git_worktree.py  github.py  handoff.py  hooks.py  intent.py  jobs.py  models.py  notify.py  paths.py  permissions.py  phases.py  planner.py  policy.py  projects.py  prompts.py  provider_health.py  provider_login.py  (+11 more)
tests/: conftest.py  test_agent_view.py  test_backends.py  test_budget.py  test_cli.py  test_command_center.py  test_config.py  test_control_center_models.py  test_db.py  test_dispatcher.py  test_git_worktree.py  test_handoff.py  test_hook_enforcement.py  test_hooks.py  test_hooks_policy.py  test_integration_engine.py  test_intent.py  test_permissions.py  test_phases.py  test_planner.py  test_projects.py  test_prompts.py  test_provider_launch.py  test_provider_registry.py  test_provider_wizard.py  test_queue.py  test_reconcile.py  test_scheduler.py  test_sessions.py  test_statusline.py  test_transcript_index.py  test_tui_app.py  test_tui_data.py  test_worker_hooks.py  test_zellij.py
(+34 files in other folders)
